language/move-prover/tests/sources/functional/parse_error.move
module 0x42::Test {

    fun foo(x: u64) { 1 )
}
